# youbot_cpp

./: .gitignore  CMakeLists.txt  DataCollector.cpp  LICENSE  README.md  Test.cpp  Train.cpp  TrainGenetic.cpp  TrainSup.cpp  main.cpp
include/: DataCollector.hpp  Test.hpp  Train.hpp  TrainGenetic.hpp  TrainSup.hpp
lib/neural_network/cuda/: dev_array.h
lib/neural_network/cuda/matmul/: MatUtil.cu  MatUtil.cuh  Matmul.cu  Matmul.cuh
lib/neural_network/layer/: Layer.cpp  Layer.hpp
lib/neural_network/network/: Network.cpp  Network.hpp
lib/neural_network/neuron/: Neuron.cpp  Neuron.hpp
lib/util/: Numbers.hpp
lib/util/angle/: Angle.cpp  Angle.hpp
lib/util/matrix/: Matrix.cpp  Matrix.hpp
lib/util/pid/: Pid.cpp  Pid.h  Pid.hpp
lib/util/vector/: Vector.cpp  Vector.hpp
lib/webots/controller/: Controller.cpp  Controller.h  Controller.hpp
lib/webots/youbot/: YouBot.cpp  YouBot.hpp
lib/webots/youbot/arm/: Arm.cpp  Arm.hpp
lib/webots/youbot/base/: Base.cpp  Base.hpp
lib/webots/youbot/gripper/: Gripper.cpp  Gripper.hpp
